# ooh-togglie

./: .env  .gitignore  Cargo.toml  README.md  cp .env.example .env  docker-compose.yml  prometheus.yml  vite.config.ts
edge-api-worker-rs/: config.js  index.html  index.ts  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
edge-api-worker-rs/site/: index.html
edge-api-worker-rs/src/: index.ts
edge-worker/: .dev.vars  package-lock.json  package.json  tsconfig.json  upstash_token.txt  wrangler.toml
edge-worker/.github/workflows/: ci.yml
edge-worker/k6/: eval.js
edge-worker/migrations/: 0001_init.sql  0002_schema.sql  0003_tables.sql
edge-worker/src/: index.ts  indrx.ts
edge-worker/src/lib/: edgeApi.ts
edge-worker/tests/: openapi.e2e.test.ts
src/: db.rs  main.rs  state.rs
src/routes/: health.rs  items.rs  mod.rs
