[package]
name = "rust-api-mvp"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-prometheus = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower-governor = "0.5"
utoipa = { version = "4", features = ["axum_extras", "macros"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"


# OpenTelemetry (exporter optional)
opentelemetry = { version = "0.24", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.17", features = ["tonic", "trace"] }
tracing-opentelemetry = "0.26"


# Redis optional (uncomment if needed)
# redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }