[package]
name = "edge-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-prometheus = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
# optional per-connection rate limiter from tower; simple and free
# use tower::limit::RateLimitLayer;
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "chrono",
  "uuid",
  "tls-rustls"
] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
